tried fixing the shifting icon problem

--- a/skyprecisionWebsite/skyprecision/src/components/Navbar.css
+++ b/skyprecisionWebsite/skyprecision/src/components/Navbar.css
@@ -42,11 +42,15 @@
   display: flex;
   align-items: center;
   position: auto;
-  object-fit: contain;
+
 }
 
 .navbar-icon {
   margin-right: 0.5rem;
+  object-fit: contain;
+  width: auto;
+  height: auto;
+  position: flex;
 }
 
 .nav-menu {
@@ -131,10 +135,15 @@
   }
 
   .navbar-logo {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
     transform: translate(25%, 50%);
+    object-fit: contain;
+  }
+
+  .navbar-icon {
+    object-fit: contain;
   }
 
   .menu-icon {
